--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -23,7 +23,7 @@
 
 .login-input {
   width: 100%;
-  padding: 10px 20px;
+  padding: 12px;
   border: 2px solid #E0F0F0;
   border-radius: 12px;
   font-size: 16px;
